# react-in-react

./: .gitignore  AGENTS.md  Cargo.toml  index.html  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml
docs/: implementation-steps.md
e2e/: browser-c-vm-smoke.e2e.ts  sample2-preview-repro.e2e.ts  sample3-preview.e2e.ts  session-preview.e2e.ts  zip-replace-preview.e2e.ts  zip-replace-sample2-sample3.e2e.ts  zip-replace-three-samples.e2e.ts
public/: preview-sw.js
rust/quickjs-ng-sys/: Cargo.toml  build.rs
rust/quickjs-ng-sys/src/: lib.rs
rust/runtime-host/: Cargo.toml  build.rs
rust/runtime-host/src/: engine.rs  error.rs  ffi.rs  host.rs  lib.rs  protocol.rs  vfs.rs
sample/sample1/: package-lock.json  package.json
sample/sample2/: package-lock.json  package.json
sample/sample3/: package-lock.json  package.json
src/: App.tsx  main.tsx  preview-client.tsx  style.css
src/components/: PreviewFrame.tsx
src/preview/: PreviewApp.tsx
src/preview/shims/: empty-module.js  jsx-dev-runtime.js  jsx-runtime.js  react-dom-client.js  react.js  stylesheet.js
src/runtime/: analyze-archive.test.ts  analyze-archive.ts  app-base.test.ts  app-base.ts  app-smoke.ts  controller.ts  host-adapter.test.ts  host-adapter.ts  preview-constants.ts  preview-server.test.ts  preview-server.ts  preview-service-worker.ts  protocol.ts  runtime-session-state.test.ts  runtime-session-state.ts  runtime.worker.ts
