[package]
name = "runtime-host"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "runtime_host"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
quickjs-ng-engine = ["dep:quickjs-ng-sys"]

[dependencies]
quickjs-ng-sys = { path = "../quickjs-ng-sys", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
