[package]
name = "runtime-host"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "runtime_host"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
quickjs-ng-engine = ["dep:quickjs-ng-sys"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quickjs-ng-sys = { path = "../quickjs-ng-sys", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
